test/compilable/imports/test7491d.d
module imports.test7491d;

void writeln();
