test/fail_compilation/imports/test313priv.d
module imports.test313priv;

void foo()
{
}
